<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="afterDescendants"
    android:id="@+id/my_wholelayout"
    android:focusable="false">

    <FrameLayout android:id="@+id/TableLayout01"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:shrinkColumns="1"
        android:stretchColumns="2"
        android:background="#111111"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_record_str"
            android:textSize="20sp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="15dp"
            android:id="@+id/add_record_title" />
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:baselineAligned="true">
            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_type"
                android:layout_gravity="left"
                android:layout_weight="10"
                android:textSize = "25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what"
                android:id="@+id/text_what"
                android:layout_weight="8"
                android:textSize="25sp"
                android:allowUndo="false" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_what_to_do"
                android:inputType="text"
                android:layout_weight="85"
                android:textSize="25sp"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView3"
                android:visibility="invisible"
                android:layout_weight="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_much"
                android:id="@+id/textView2"
                android:layout_weight="8"
                android:textSize="25sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_how_much"
                android:layout_weight="85"
                android:inputType="numberDecimal"
                android:lines="1"
                android:allowUndo="false"
                android:textSize="25sp"
                android:textAlignment="center" />
            <TextView
                android:text="RMB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:textSize="25sp"
                android:id="@+id/textView4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:id="@+id/textView5"
                android:textSize="25sp"
                android:layout_weight="10"
                android:focusable="false"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_date"
                android:textSize="25sp"
                android:layout_weight="85"
                android:focusable="false"
                android:textAlignment="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_time"
                android:layout_weight="85"
                android:textSize="25sp"
                android:focusable="false"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ok"
                android:id="@+id/button_ok"
                android:layout_weight="1"
                android:background="@drawable/nimei"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_cancel"
                android:id="@+id/button_cancel"
                android:layout_weight="1"
                android:background="@drawable/nimei"/>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
